# inf_theory_compressor

./: CMakeLists.txt  coder.cpp  decoder.cpp  lib.h
test/: script.sh
